コピー・ペーストした際に、一部カラムの単語情報が消えるバグ修正